--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ verify_ssl = true
 [packages]
 django = "==2.1.5"
 djangorestframework = "==3.9.2"
+mysqlclient = "*"
 
 [requires]
 python_version = "3.5"
